INTERLOK-3196 Use IOUtils to read entire byte[]